fix: remove unwanted scrollbar in game header section

--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -79,6 +79,7 @@ iframe{
 
 .header-game-view {
     display: flex;
+    overflow: hidden;
     margin: 0 20px;
     justify-content: center;
     width: 100%;
